// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OE - Language EC renders correctly 1`] = `
<jest>
  <div
    class="bcl-language-list bcl-language-list--ec pt-5"
  >
    <div
      class="container"
    >
      <div
        class="text-center"
      >
        <div
          class="d-inline-flex align-items-center"
        >
          <img
            alt="logo"
            class="w-100 mb-3"
            src="https://cdn1.fpfis.tech.ec.europa.eu/ecl/v3.0.2/ec/images/logo/logo-ec--en.svg"
          />
        </div>
      </div>
    </div>
    <div
      class="main pt-4"
    >
      <div
        class="container"
      >
        <div
          class="pb-2"
        >
          <h5
            class="mb-4"
          >
            EU official languages
          </h5>
          <div
            class="row"
          >
            <div
              class="col-12 col-md"
            />
            <div
              class="col-12 col-md"
            />
          </div>
        </div>
        <div
          class="pb-2"
        >
          <h5
            class="mb-4"
          >
            Other languages
          </h5>
          <div
            class="row"
          >
            <div
              class="col-12 col-md"
            />
            <div
              class="col-12 col-md"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Language EU renders correctly 1`] = `
<jest>
  <div
    class="bcl-language-list bcl-language-list--eu pt-5"
  >
    <div
      class="container"
    >
      <div
        class="text-center"
      >
        <div
          class="d-inline-flex align-items-center"
        >
          <img
            alt="logo"
            class="w-100"
            src="https://cdn1.fpfis.tech.ec.europa.eu/ecl/v3.0.2/eu/images/logo/logo-eu--mute.svg"
          />
        </div>
      </div>
    </div>
    <div
      class="main pt-4"
    >
      <div
        class="container"
      >
        <div
          class="pb-2"
        >
          <div
            class="row"
          >
            <div
              class="col-12 col-md"
            />
            <div
              class="col-12 col-md"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Language Neutral renders correctly 1`] = `
<jest>
  <div
    class="bcl-language-list bcl-language-list--neutral pt-5"
  >
    <div
      class="container"
    >
      <div
        class="d-inline-flex align-items-center"
      >
        <img
          alt="logo"
          src="https://inno-ecl.s3.amazonaws.com/media/examples/placeholder.svg"
        />
        <h5
          class="h5 ms-4"
        >
          Project name
        </h5>
      </div>
    </div>
    <div
      class="main pt-4"
    >
      <div
        class="container"
      >
        <div
          class="pb-2"
        >
          <div
            class="row"
          >
            <div
              class="col-12 col-md"
            />
            <div
              class="col-12 col-md"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Language modal ec renders correctly 1`] = `
<jest>
  <div
    aria-hidden="true"
    aria-label="languageModalLabel"
    class="modal fade"
    id="languageModal"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-fullscreen"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-body"
        >
          <div
            class="bcl-language-list bcl-language-list--ec"
          >
            <div
              class="main pt-4"
            >
              <div
                class="container"
              >
                <div
                  class="pb-2"
                >
                  <h5
                    class="mb-4"
                  >
                    EU official languages
                  </h5>
                  <div
                    class="row"
                  >
                    <div
                      class="col-12 col-md"
                    >
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#bg"
                        hreflang="bg"
                        lang="bg"
                      >
                        български
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#es"
                        hreflang="es"
                        lang="es"
                      >
                        español
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#cs"
                        hreflang="cs"
                        lang="cs"
                      >
                        čeština
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#da"
                        hreflang="da"
                        lang="da"
                      >
                        dansk
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#de"
                        hreflang="de"
                        lang="de"
                      >
                        Deutsch
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#et"
                        hreflang="et"
                        lang="et"
                      >
                        eesti
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#el"
                        hreflang="el"
                        lang="el"
                      >
                        ελληνικά
                      </a>
                      <a
                        class="w-100 mb-2-5 btn selected justify-content-between"
                        href="/example.html#en"
                        hreflang="en"
                        lang="en"
                      >
                        English
                        <svg
                          class="ms-2-5 bi icon--s"
                        >
                          <use
                            xlink:href="/icons.svg#check2"
                          />
                        </svg>
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#fr"
                        hreflang="fr"
                        lang="fr"
                      >
                        français
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#ga"
                        hreflang="ga"
                        lang="ga"
                      >
                        Gaeilge
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#hr"
                        hreflang="hr"
                        lang="hr"
                      >
                        hrvatski
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#it"
                        hreflang="it"
                        lang="it"
                      >
                        italiano
                      </a>
                    </div>
                    <div
                      class="col-12 col-md"
                    >
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#lv"
                        hreflang="lv"
                        lang="lv"
                      >
                        latviešu
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#lt"
                        hreflang="lt"
                        lang="lt"
                      >
                        lietuvių
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#hu"
                        hreflang="hu"
                        lang="hu"
                      >
                        magyar
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#mt"
                        hreflang="mt"
                        lang="mt"
                      >
                        Malti
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#nl"
                        hreflang="nl"
                        lang="nl"
                      >
                        Nederlands
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#pl"
                        hreflang="pl"
                        lang="pl"
                      >
                        polski
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#pt"
                        hreflang="pt"
                        lang="pt"
                      >
                        português
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#ro"
                        hreflang="ro"
                        lang="ro"
                      >
                        română
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#sk"
                        hreflang="sk"
                        lang="sk"
                      >
                        slovenčina
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#sl"
                        hreflang="sl"
                        lang="sl"
                      >
                        slovenščina
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#fi"
                        hreflang="fi"
                        lang="fi"
                      >
                        suomi
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#sv"
                        hreflang="sv"
                        lang="sv"
                      >
                        svenska
                      </a>
                    </div>
                  </div>
                </div>
                <div
                  class="pb-2"
                >
                  <h5
                    class="mb-4"
                  >
                    Other languages
                  </h5>
                  <div
                    class="row"
                  >
                    <div
                      class="col-12 col-md"
                    >
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#zh"
                        hreflang="zh"
                        lang="zh"
                      >
                        中文
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#tr"
                        hreflang="tr"
                        lang="tr"
                      >
                        Türk
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#ru"
                        hreflang="ru"
                        lang="ru"
                      >
                        pусский
                      </a>
                    </div>
                    <div
                      class="col-12 col-md"
                    >
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#ca"
                        hreflang="ca"
                        lang="ca"
                      >
                        Català
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="ar"
                        lang="ar"
                      >
                        عَرَبِيّ
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Language modal eu renders correctly 1`] = `
<jest>
  <div
    aria-hidden="true"
    aria-label="languageModalLabel"
    class="modal fade"
    id="languageModal"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-fullscreen"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-body"
        >
          <div
            class="bcl-language-list bcl-language-list--eu"
          >
            <div
              class="main pt-4"
            >
              <div
                class="container"
              >
                <div
                  class="pb-2"
                >
                  <h5
                    class="mb-4"
                  >
                    EU official languages
                  </h5>
                  <div
                    class="row"
                  >
                    <div
                      class="col-12 col-md"
                    >
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#bg"
                        hreflang="bg"
                        lang="bg"
                      >
                        български
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#es"
                        hreflang="es"
                        lang="es"
                      >
                        español
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#cs"
                        hreflang="cs"
                        lang="cs"
                      >
                        čeština
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#da"
                        hreflang="da"
                        lang="da"
                      >
                        dansk
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#de"
                        hreflang="de"
                        lang="de"
                      >
                        Deutsch
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#et"
                        hreflang="et"
                        lang="et"
                      >
                        eesti
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#el"
                        hreflang="el"
                        lang="el"
                      >
                        ελληνικά
                      </a>
                      <a
                        class="w-100 mb-2-5 btn selected justify-content-between"
                        href="/example.html#en"
                        hreflang="en"
                        lang="en"
                      >
                        English
                        <svg
                          class="ms-2-5 bi icon--s"
                        >
                          <use
                            xlink:href="/icons.svg#check2"
                          />
                        </svg>
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#fr"
                        hreflang="fr"
                        lang="fr"
                      >
                        français
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#ga"
                        hreflang="ga"
                        lang="ga"
                      >
                        Gaeilge
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#hr"
                        hreflang="hr"
                        lang="hr"
                      >
                        hrvatski
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#it"
                        hreflang="it"
                        lang="it"
                      >
                        italiano
                      </a>
                    </div>
                    <div
                      class="col-12 col-md"
                    >
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#lv"
                        hreflang="lv"
                        lang="lv"
                      >
                        latviešu
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#lt"
                        hreflang="lt"
                        lang="lt"
                      >
                        lietuvių
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#hu"
                        hreflang="hu"
                        lang="hu"
                      >
                        magyar
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#mt"
                        hreflang="mt"
                        lang="mt"
                      >
                        Malti
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#nl"
                        hreflang="nl"
                        lang="nl"
                      >
                        Nederlands
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#pl"
                        hreflang="pl"
                        lang="pl"
                      >
                        polski
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#pt"
                        hreflang="pt"
                        lang="pt"
                      >
                        português
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#ro"
                        hreflang="ro"
                        lang="ro"
                      >
                        română
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#sk"
                        hreflang="sk"
                        lang="sk"
                      >
                        slovenčina
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#sl"
                        hreflang="sl"
                        lang="sl"
                      >
                        slovenščina
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#fi"
                        hreflang="fi"
                        lang="fi"
                      >
                        suomi
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#sv"
                        hreflang="sv"
                        lang="sv"
                      >
                        svenska
                      </a>
                    </div>
                  </div>
                </div>
                <div
                  class="pb-2"
                >
                  <h5
                    class="mb-4"
                  >
                    Other languages
                  </h5>
                  <div
                    class="row"
                  >
                    <div
                      class="col-12 col-md"
                    >
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#zh"
                        hreflang="zh"
                        lang="zh"
                      >
                        中文
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#tr"
                        hreflang="tr"
                        lang="tr"
                      >
                        Türk
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#ru"
                        hreflang="ru"
                        lang="ru"
                      >
                        pусский
                      </a>
                    </div>
                    <div
                      class="col-12 col-md"
                    >
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="/example.html#ca"
                        hreflang="ca"
                        lang="ca"
                      >
                        Català
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="ar"
                        lang="ar"
                      >
                        عَرَبِيّ
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Language modal neutral renders correctly 1`] = `
<jest>
  <div
    aria-hidden="true"
    aria-label="languageModalLabel"
    class="modal fade"
    id="languageModal"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-fullscreen"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-body"
        >
          <div
            class="bcl-language-list bcl-language-list--neutral"
          >
            <div
              class="main pt-4"
            >
              <div
                class="pb-2"
              >
                <h5
                  class="mb-4"
                >
                  EU official languages
                </h5>
                <div
                  class="row"
                >
                  <div
                    class="col-12 col-md"
                  >
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#bg"
                      hreflang="bg"
                      lang="bg"
                    >
                      български
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#es"
                      hreflang="es"
                      lang="es"
                    >
                      español
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#cs"
                      hreflang="cs"
                      lang="cs"
                    >
                      čeština
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#da"
                      hreflang="da"
                      lang="da"
                    >
                      dansk
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#de"
                      hreflang="de"
                      lang="de"
                    >
                      Deutsch
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#et"
                      hreflang="et"
                      lang="et"
                    >
                      eesti
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#el"
                      hreflang="el"
                      lang="el"
                    >
                      ελληνικά
                    </a>
                    <a
                      class="w-100 mb-2-5 btn selected justify-content-between"
                      href="/example.html#en"
                      hreflang="en"
                      lang="en"
                    >
                      English
                      <svg
                        class="ms-2-5 bi icon--s"
                      >
                        <use
                          xlink:href="/icons.svg#check2"
                        />
                      </svg>
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#fr"
                      hreflang="fr"
                      lang="fr"
                    >
                      français
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#ga"
                      hreflang="ga"
                      lang="ga"
                    >
                      Gaeilge
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#hr"
                      hreflang="hr"
                      lang="hr"
                    >
                      hrvatski
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#it"
                      hreflang="it"
                      lang="it"
                    >
                      italiano
                    </a>
                  </div>
                  <div
                    class="col-12 col-md"
                  >
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#lv"
                      hreflang="lv"
                      lang="lv"
                    >
                      latviešu
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#lt"
                      hreflang="lt"
                      lang="lt"
                    >
                      lietuvių
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#hu"
                      hreflang="hu"
                      lang="hu"
                    >
                      magyar
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#mt"
                      hreflang="mt"
                      lang="mt"
                    >
                      Malti
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#nl"
                      hreflang="nl"
                      lang="nl"
                    >
                      Nederlands
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#pl"
                      hreflang="pl"
                      lang="pl"
                    >
                      polski
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#pt"
                      hreflang="pt"
                      lang="pt"
                    >
                      português
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#ro"
                      hreflang="ro"
                      lang="ro"
                    >
                      română
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#sk"
                      hreflang="sk"
                      lang="sk"
                    >
                      slovenčina
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#sl"
                      hreflang="sl"
                      lang="sl"
                    >
                      slovenščina
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#fi"
                      hreflang="fi"
                      lang="fi"
                    >
                      suomi
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#sv"
                      hreflang="sv"
                      lang="sv"
                    >
                      svenska
                    </a>
                  </div>
                </div>
              </div>
              <div
                class="pb-2"
              >
                <h5
                  class="mb-4"
                >
                  Other languages
                </h5>
                <div
                  class="row"
                >
                  <div
                    class="col-12 col-md"
                  >
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#zh"
                      hreflang="zh"
                      lang="zh"
                    >
                      中文
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#tr"
                      hreflang="tr"
                      lang="tr"
                    >
                      Türk
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#ru"
                      hreflang="ru"
                      lang="ru"
                    >
                      pусский
                    </a>
                  </div>
                  <div
                    class="col-12 col-md"
                  >
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="/example.html#ca"
                      hreflang="ca"
                      lang="ca"
                    >
                      Català
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="#"
                      hreflang="ar"
                      lang="ar"
                    >
                      عَرَبِيّ
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</jest>
`;
